test/units/ParseSpec/valid/decl/data-monomorphic.algst
data IntList
  = Cons Int IntList
  | Nil
