test/units/ParseSpec/invalid/decl/duplicate-constructor-2.algst
data Where = Here | Here Int
